--- a/package.json
+++ b/package.json
@@ -9,24 +9,27 @@
   },
   "dependencies": {
     "classnames": "2.2.6",
-    "date-fns": "2.10.0",
+    "date-fns": "2.18.0",
     "gray-matter": "4.0.2",
+    "mongodb": "^3.6.4",
     "next": "latest",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "remark": "11.0.2",
-    "remark-html": "10.0.0",
-    "typescript": "^4.0.3"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "remark": "13.0.0",
+    "remark-html": "13.0.1",
+    "swr": "^0.4.2",
+    "typescript": "^4.2.2"
   },
   "devDependencies": {
-    "@types/classnames": "^2.2.10",
-    "@types/jest": "^25.2.2",
-    "@types/node": "^14.0.1",
-    "@types/react": "^16.9.35",
-    "@types/react-dom": "^16.9.8",
-    "autoprefixer": "^10.2.1",
-    "postcss": "^8.2.4",
-    "tailwindcss": "^2.0.2"
+    "@types/classnames": "^2.2.11",
+    "@types/jest": "^26.0.20",
+    "@types/mongodb": "^3.6.8",
+    "@types/node": "^14.14.31",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
+    "autoprefixer": "^10.2.4",
+    "postcss": "^8.2.6",
+    "tailwindcss": "^2.0.3"
   },
   "license": "MIT"
 }
